All tests done?

--- a/2021/04 - April/28 - Summit 2021 - High-Intensity Scripting/Dashboard/Assets/theme.css
+++ b/2021/04 - April/28 - Summit 2021 - High-Intensity Scripting/Dashboard/Assets/theme.css
@@ -31,6 +31,10 @@
     font-size: 4em !important;
 }
 
+.MuiTypography-h3 {
+    width: 100% !important;
+}
+
 .MuiTypography-h5 {
     width: 100% !important;
 }
